[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/pause_menu.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="PauseMenu" type="MarginContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -300.0
margin_top = -144.5
margin_right = 300.0
margin_bottom = 144.5
custom_constants/margin_right = 30
custom_constants/margin_top = 30
custom_constants/margin_left = 30
custom_constants/margin_bottom = 30
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 30.0
margin_top = 30.0
margin_right = 570.0
margin_bottom = 259.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PausedLabel" type="Label" parent="VBoxContainer"]
margin_right = 540.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 1 )
text = "GAME PAUSED"
align = 1
valign = 1

[node name="ResumeButton" type="Button" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 540.0
margin_bottom = 115.0
theme = ExtResource( 2 )
text = "Resume"

[node name="RestartButton" type="Button" parent="VBoxContainer"]
margin_top = 119.0
margin_right = 540.0
margin_bottom = 172.0
theme = ExtResource( 2 )
text = "Restart"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 176.0
margin_right = 540.0
margin_bottom = 229.0
theme = ExtResource( 2 )
text = "Quit"

[node name="DebounceTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true
[connection signal="pressed" from="VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
